--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:id="@+id/employeeNameET"
         android:layout_width="match_parent"
         android:hint="Employee Name"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:inputType="" />
 
 
     <EditText
